Code/syntax.output
Terminals unused in grammar

   COMMENT


State 27 conflicts: 1 shift/reduce
State 32 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error END

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP

   21 VarList: ParamDec COMMA VarList
   22        | ParamDec

   23 ParamDec: Specifier VarDec

   24 CompSt: LC DefList StmtList RC

   25 StmtList: Stmt StmtList
   26         | %empty

   27 Stmt: Exp SEMI
   28     | CompSt
   29     | RETURN Exp SEMI
   30     | IF LP Exp RP Stmt
   31     | IF LP Exp RP Stmt ELSE Stmt
   32     | WHILE LP Exp RP Stmt
   33     | error END

   34 DefList: Def DefList
   35        | %empty

   36 Def: Specifier DecList SEMI
   37    | error END

   38 DecList: Dec
   39        | Dec COMMA DecList

   40 Dec: VarDec
   41    | VarDec ASSIGNOP Exp

   42 Exp: Exp ASSIGNOP Exp
   43    | Exp AND Exp
   44    | Exp OR Exp
   45    | Exp RELOP Exp
   46    | Exp PLUS Exp
   47    | Exp MINUS Exp
   48    | Exp STAR Exp
   49    | Exp DIV Exp
   50    | LP Exp RP
   51    | MINUS Exp
   52    | NOT Exp
   53    | ID LP Args RP
   54    | ID LP RP
   55    | Exp LB Exp RB
   56    | Exp DOT ID
   57    | ID
   58    | INT
   59    | FLOAT

   60 Args: Exp COMMA Args
   61     | Exp

   62 END: SEMI
   63    | RC


Terminals, with rules where they appear

$end (0) 0
error (256) 7 33 37
TYPE (258) 10
INT (259) 18 58
ID (260) 14 16 17 19 20 53 54 56 57
FLOAT (261) 59
SEMI (262) 4 5 27 29 36 62
COMMA (263) 9 21 39 60
ASSIGNOP (264) 41 42
RELOP (265) 45
PLUS (266) 46
MINUS (267) 47 51
STAR (268) 48
DIV (269) 49
AND (270) 43
OR (271) 44
NOT (272) 52
DOT (273) 56
LP (274) 19 20 30 31 32 50 53 54
RP (275) 19 20 30 31 32 50 53 54
LB (276) 18 55
RB (277) 18 55
LC (278) 12 24
RC (279) 12 24 63
STRUCT (280) 12 13
RETURN (281) 29
IF (282) 30 31
ELSE (283) 31
WHILE (284) 32
COMMENT (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7, on right: 2
ExtDecList (35)
    on left: 8 9, on right: 4 9
Specifier (36)
    on left: 10 11, on right: 4 5 6 23 36
StructSpecifier (37)
    on left: 12 13, on right: 11
OptTag (38)
    on left: 14 15, on right: 12
Tag (39)
    on left: 16, on right: 13
VarDec (40)
    on left: 17 18, on right: 8 9 18 23 40 41
FunDec (41)
    on left: 19 20, on right: 6
VarList (42)
    on left: 21 22, on right: 19 21
ParamDec (43)
    on left: 23, on right: 21 22
CompSt (44)
    on left: 24, on right: 6 28
StmtList (45)
    on left: 25 26, on right: 24 25
Stmt (46)
    on left: 27 28 29 30 31 32 33, on right: 25 30 31 32
DefList (47)
    on left: 34 35, on right: 12 24 34
Def (48)
    on left: 36 37, on right: 34
DecList (49)
    on left: 38 39, on right: 36 39
Dec (50)
    on left: 40 41, on right: 38 39
Exp (51)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59,
    on right: 27 29 30 31 32 41 42 43 44 45 46 47 48 49 50 51 52 55
    56 60 61
Args (52)
    on left: 60 61, on right: 53 60
END (53)
    on left: 62 63, on right: 7 33 37


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error . END

    SEMI  shift, and go to state 9
    RC    shift, and go to state 10

    END  go to state 11


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 12

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 13
    Tag     go to state 14


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 15


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 16
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 17
    SEMI  shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

   62 END: SEMI .

    $default  reduce using rule 62 (END)


State 10

   63 END: RC .

    $default  reduce using rule 63 (END)


State 11

    7 ExtDef: error END .

    $default  reduce using rule 7 (ExtDef)


State 12

   14 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 13

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 22


State 14

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 15

    0 $accept: Program $end .

    $default  accept


State 16

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 17

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 17 (VarDec)


State 18

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 19

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 20

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 8 (ExtDecList)


State 21

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 27

    CompSt  go to state 28


State 22

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 29
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 35 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 31
    Def              go to state 32


State 23

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 20


State 26

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 39


State 27

   24 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 29
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 35 (DefList)]
    INT     reduce using rule 35 (DefList)
    ID      reduce using rule 35 (DefList)
    FLOAT   reduce using rule 35 (DefList)
    MINUS   reduce using rule 35 (DefList)
    NOT     reduce using rule 35 (DefList)
    LP      reduce using rule 35 (DefList)
    LC      reduce using rule 35 (DefList)
    RC      reduce using rule 35 (DefList)
    RETURN  reduce using rule 35 (DefList)
    IF      reduce using rule 35 (DefList)
    WHILE   reduce using rule 35 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 40
    Def              go to state 32


State 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 29

   37 Def: error . END

    SEMI  shift, and go to state 9
    RC    shift, and go to state 10

    END  go to state 41


State 30

   36 Def: Specifier . DecList SEMI

    ID  shift, and go to state 37

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 31

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 45


State 32

   34 DefList: Def . DefList

    error   shift, and go to state 29
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 35 (DefList)]
    INT     reduce using rule 35 (DefList)
    ID      reduce using rule 35 (DefList)
    FLOAT   reduce using rule 35 (DefList)
    MINUS   reduce using rule 35 (DefList)
    NOT     reduce using rule 35 (DefList)
    LP      reduce using rule 35 (DefList)
    LC      reduce using rule 35 (DefList)
    RC      reduce using rule 35 (DefList)
    RETURN  reduce using rule 35 (DefList)
    IF      reduce using rule 35 (DefList)
    WHILE   reduce using rule 35 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 46
    Def              go to state 32


State 33

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 34

   23 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  go to state 47


State 35

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 48


State 36

   21 VarList: ParamDec . COMMA VarList
   22        | ParamDec .

    COMMA  shift, and go to state 49

    $default  reduce using rule 22 (VarList)


State 37

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 38

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 39

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 50


State 40

   24 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 51
    INT     shift, and go to state 52
    ID      shift, and go to state 53
    FLOAT   shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 27
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    RC  reduce using rule 26 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 62
    Stmt      go to state 63
    Exp       go to state 64


State 41

   37 Def: error END .

    $default  reduce using rule 37 (Def)


State 42

   18 VarDec: VarDec . LB INT RB
   40 Dec: VarDec .
   41    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 65
    LB        shift, and go to state 26

    $default  reduce using rule 40 (Dec)


State 43

   36 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 66


State 44

   38 DecList: Dec .
   39        | Dec . COMMA DecList

    COMMA  shift, and go to state 67

    $default  reduce using rule 38 (DecList)


State 45

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 46

   34 DefList: Def DefList .

    $default  reduce using rule 34 (DefList)


State 47

   18 VarDec: VarDec . LB INT RB
   23 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 23 (ParamDec)


State 48

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 49

   21 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 68
    ParamDec         go to state 36


State 50

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 51

   33 Stmt: error . END

    SEMI  shift, and go to state 9
    RC    shift, and go to state 10

    END  go to state 69


State 52

   58 Exp: INT .

    $default  reduce using rule 58 (Exp)


State 53

   53 Exp: ID . LP Args RP
   54    | ID . LP RP
   57    | ID .

    LP  shift, and go to state 70

    $default  reduce using rule 57 (Exp)


State 54

   59 Exp: FLOAT .

    $default  reduce using rule 59 (Exp)


State 55

   51 Exp: MINUS . Exp

    INT    shift, and go to state 52
    ID     shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 71


State 56

   52 Exp: NOT . Exp

    INT    shift, and go to state 52
    ID     shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 72


State 57

   50 Exp: LP . Exp RP

    INT    shift, and go to state 52
    ID     shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 73


State 58

   29 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 52
    ID     shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 74


State 59

   30 Stmt: IF . LP Exp RP Stmt
   31     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 75


State 60

   32 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 76


State 61

   28 Stmt: CompSt .

    $default  reduce using rule 28 (Stmt)


State 62

   24 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 77


State 63

   25 StmtList: Stmt . StmtList

    error   shift, and go to state 51
    INT     shift, and go to state 52
    ID      shift, and go to state 53
    FLOAT   shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 27
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    RC  reduce using rule 26 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 78
    Stmt      go to state 63
    Exp       go to state 64


State 64

   27 Stmt: Exp . SEMI
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    SEMI      shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89


State 65

   41 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 52
    ID     shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 90


State 66

   36 Def: Specifier DecList SEMI .

    $default  reduce using rule 36 (Def)


State 67

   39 DecList: Dec COMMA . DecList

    ID  shift, and go to state 37

    VarDec   go to state 42
    DecList  go to state 91
    Dec      go to state 44


State 68

   21 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 21 (VarList)


State 69

   33 Stmt: error END .

    $default  reduce using rule 33 (Stmt)


State 70

   53 Exp: ID LP . Args RP
   54    | ID LP . RP

    INT    shift, and go to state 52
    ID     shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57
    RP     shift, and go to state 92

    Exp   go to state 93
    Args  go to state 94


State 71

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   51    | MINUS Exp .
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    STAR  shift, and go to state 84
    DIV   shift, and go to state 85
    DOT   shift, and go to state 88
    LB    shift, and go to state 89

    $default  reduce using rule 51 (Exp)


State 72

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   52    | NOT Exp .
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    DOT  shift, and go to state 88
    LB   shift, and go to state 89

    $default  reduce using rule 52 (Exp)


State 73

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   50    | LP Exp . RP
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    RP        shift, and go to state 95
    LB        shift, and go to state 89


State 74

   29 Stmt: RETURN Exp . SEMI
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    SEMI      shift, and go to state 96
    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89


State 75

   30 Stmt: IF LP . Exp RP Stmt
   31     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 52
    ID     shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 97


State 76

   32 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 52
    ID     shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 98


State 77

   24 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 24 (CompSt)


State 78

   25 StmtList: Stmt StmtList .

    $default  reduce using rule 25 (StmtList)


State 79

   27 Stmt: Exp SEMI .

    $default  reduce using rule 27 (Stmt)


State 80

   42 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 52
    ID     shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 99


State 81

   45 Exp: Exp RELOP . Exp

    INT    shift, and go to state 52
    ID     shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 100


State 82

   46 Exp: Exp PLUS . Exp

    INT    shift, and go to state 52
    ID     shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 101


State 83

   47 Exp: Exp MINUS . Exp

    INT    shift, and go to state 52
    ID     shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 102


State 84

   48 Exp: Exp STAR . Exp

    INT    shift, and go to state 52
    ID     shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 103


State 85

   49 Exp: Exp DIV . Exp

    INT    shift, and go to state 52
    ID     shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 104


State 86

   43 Exp: Exp AND . Exp

    INT    shift, and go to state 52
    ID     shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 105


State 87

   44 Exp: Exp OR . Exp

    INT    shift, and go to state 52
    ID     shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 106


State 88

   56 Exp: Exp DOT . ID

    ID  shift, and go to state 107


State 89

   55 Exp: Exp LB . Exp RB

    INT    shift, and go to state 52
    ID     shift, and go to state 53
    FLOAT  shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 108


State 90

   41 Dec: VarDec ASSIGNOP Exp .
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89

    $default  reduce using rule 41 (Dec)


State 91

   39 DecList: Dec COMMA DecList .

    $default  reduce using rule 39 (DecList)


State 92

   54 Exp: ID LP RP .

    $default  reduce using rule 54 (Exp)


State 93

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
   60 Args: Exp . COMMA Args
   61     | Exp .

    COMMA     shift, and go to state 109
    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89

    $default  reduce using rule 61 (Args)


State 94

   53 Exp: ID LP Args . RP

    RP  shift, and go to state 110


State 95

   50 Exp: LP Exp RP .

    $default  reduce using rule 50 (Exp)


State 96

   29 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 29 (Stmt)


State 97

   30 Stmt: IF LP Exp . RP Stmt
   31     | IF LP Exp . RP Stmt ELSE Stmt
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    RP        shift, and go to state 111
    LB        shift, and go to state 89


State 98

   32 Stmt: WHILE LP Exp . RP Stmt
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    RP        shift, and go to state 112
    LB        shift, and go to state 89


State 99

   42 Exp: Exp . ASSIGNOP Exp
   42    | Exp ASSIGNOP Exp .
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 80
    RELOP     shift, and go to state 81
    PLUS      shift, and go to state 82
    MINUS     shift, and go to state 83
    STAR      shift, and go to state 84
    DIV       shift, and go to state 85
    AND       shift, and go to state 86
    OR        shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89

    $default  reduce using rule 42 (Exp)


State 100

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   45    | Exp RELOP Exp .
   46    | Exp . PLUS Exp
   47    | Exp . MINUS Exp
   48    | Exp . STAR Exp
   49    | Exp . DIV Exp
   55    | Exp . LB Exp RB
   56    | Exp . DOT ID
